--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,8 +46,21 @@ jobs:
     - name: Run go vet
       run: go vet ./...
       
-    - name: Run tests
-      run: go test -race -coverprofile=coverage.out ./...
+    - name: Run tests (Windows)
+      if: matrix.platform == 'windows-latest'
+      shell: powershell
+      run: go test ./...
+      
+    - name: Run tests (Unix)
+      if: matrix.platform != 'windows-latest'
+      shell: bash
+      run: go test -race ./...
+      
+    - name: Run tests with coverage
+      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.23.x'
+      shell: bash
+      run: |
+        go test -race -coverprofile coverage.out ./...
       
     - name: Upload coverage to Codecov
       if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.23.x'
