--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,6 +109,7 @@ jobs:
       with:
         version: v1.60.1
         args: --timeout=5m
+        skip-cache: true
 
   security:
     runs-on: ubuntu-latest
