ci: use specific golangci-lint version with binary install
- Use v1.62.2 instead of latest for more predictable behavior
- Add install-mode: binary for cleaner installation
- Should resolve Go export data compatibility issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,9 +107,10 @@ jobs:
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
+        version: v1.62.2
         args: --timeout=5m
         skip-cache: true
+        install-mode: binary
 
   security:
     runs-on: ubuntu-latest
