--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.21.x, 1.22.x, 1.23.x]
+        go-version: [1.22.x, 1.23.x, 1.24.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     
@@ -57,13 +57,13 @@ jobs:
       run: go test -race ./...
       
     - name: Run tests with coverage
-      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.23.x'
+      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.24.x'
       shell: bash
       run: |
         go test -race -coverprofile coverage.out ./...
       
     - name: Upload coverage to Codecov
-      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.23.x'
+      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.24.x'
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.out
@@ -79,7 +79,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.23.x
+        go-version: 1.24.x
         
     - name: Cache Go modules
       uses: actions/cache@v4
@@ -107,7 +107,7 @@ jobs:
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.62.2
+        version: latest
         args: --timeout=5m
         skip-cache: true
         install-mode: binary
@@ -121,7 +121,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.23.x
+        go-version: 1.24.x
         
     - name: Cache Go modules
       uses: actions/cache@v4
