--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,4 +138,6 @@ jobs:
       run: |
         # Install gosec using the binary release method
         curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.21.4
+        # Add GOPATH/bin to PATH and run gosec
+        export PATH=$(go env GOPATH)/bin:$PATH
         gosec ./...
