fix(ci): Use full path for gosec binary execution
PATH export wasn't working in GitHub Actions environment.
Using /home/mart/go/bin/gosec directly instead of relying on PATH.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,6 +138,5 @@ jobs:
       run: |
         # Install gosec using the binary release method
         curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.21.4
-        # Add GOPATH/bin to PATH and run gosec
-        export PATH=$(go env GOPATH)/bin:$PATH
-        gosec ./...
+        # Run gosec using full path
+        $(go env GOPATH)/bin/gosec ./...
