--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -134,9 +134,12 @@ jobs:
     - name: Download dependencies
       run: go mod download
         
-    - name: Run Gosec Security Scanner
+    - name: Install gosec
       run: |
-        # Install gosec using the binary release method
-        curl -sfL https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.21.4
-        # Run gosec using full path
-        $(go env GOPATH)/bin/gosec ./...
+        GOSEC_VERSION=v2.21.4
+        curl -sfL https://raw.githubusercontent.com/securego/gosec/master/install.sh | sh -s -- -b $(go env GOPATH)/bin $GOSEC_VERSION
+        echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+    - name: Run gosec
+      run: |
+        gosec ./...
