Upgrade golangci-lint to v2.5.0 with Go 1.25 support
- Migrate .golangci.yml from v1 to v2 format using golangci-lint migrate
- Update Go version in go.mod to 1.25 (matching local development)
- Configure golangci-lint for Go 1.24 compatibility with CI environments
- Upgrade GitHub Actions workflow to use golangci-lint v2.5.0
- Add all essential linters: errcheck, govet, ineffassign, staticcheck, unused, gosec, misspell
- Keep Go 1.24.x in CI workflows for compatibility until GitHub supports Go 1.25
- Resolve version compatibility issues between project Go version and linter tools

This fixes the 'can't load config: unsupported version' error caused by
golangci-lint v2.x requiring the new configuration format.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: 
+on:
   push:
     branches: [ main, develop ]
   pull_request:
@@ -95,19 +95,11 @@ jobs:
     - name: Verify dependencies
       run: go mod verify
       
-    - name: Debug dependencies
-      run: |
-        echo "=== go.mod content ==="
-        cat go.mod
-        echo "=== keyring dependency check ==="
-        grep -i keyring go.mod || echo "keyring not found in go.mod"
-        echo "=== go list dependencies ==="
-        go list -m all | grep -i keyring || echo "keyring not in module list"
-        
-    - name: golangci-lint
+    - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.61.0
+        # Use latest v2.x version which supports the new config format and Go 1.24+
+        version: v2.5.0
         args: --timeout=5m
         skip-cache: true
         install-mode: binary
