--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,7 @@
+version: "2"
 run:
-  timeout: 5m
+  go: "1.24"
   tests: true
-
 linters:
   enable:
     - errcheck
@@ -11,7 +11,24 @@ linters:
     - unused
     - gosec
     - misspell
-
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
