Fix Docker build context by including go.mod, go.sum and source files in GoReleaser extra_files

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -150,6 +150,12 @@ dockers:
       - scripts/
       - README.md
       - LICENSE
+      - go.mod
+      - go.sum
+      - cmd/
+      - pkg/
+      - main.go
+      - completions/
 
 # Checksums
 checksum:
