--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.22.x, 1.23.x, 1.24.x, 1.25.x]
+        go-version: [1.22.x, 1.23.x, 1.24.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     
@@ -58,13 +58,13 @@ jobs:
       run: go test -race ./...
       
     - name: Run tests with coverage
-      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.25.x'
+      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.24.x'
       shell: bash
       run: |
         go test -race -coverprofile coverage.out ./...
       
     - name: Upload coverage to Codecov
-      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.25.x'
+      if: matrix.platform == 'ubuntu-latest' && matrix.go-version == '1.24.x'
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.out
@@ -80,7 +80,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.25.x
+        go-version: 1.24.x
         
     - name: Cache Go modules
       uses: actions/cache@v4
@@ -114,7 +114,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.25.x
+        go-version: 1.24.x
         
     - name: Cache Go modules
       uses: actions/cache@v4
