--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -138,7 +138,7 @@ dockers:
       - "ghcr.io/martwebber/mpesa-cli:v{{ .Major }}.{{ .Minor }}"
     dockerfile: Dockerfile
     build_flag_templates:
-      - "--pull"
+      - "--platform=linux/amd64"
       - "--label=org.opencontainers.image.created={{.Date}}"
       - "--label=org.opencontainers.image.title={{.ProjectName}}"
       - "--label=org.opencontainers.image.revision={{.FullCommit}}"
@@ -147,15 +147,14 @@ dockers:
       - "--label=org.opencontainers.image.description=A command-line interface for M-Pesa API operations"
       - "--label=org.opencontainers.image.licenses=MIT"
     extra_files:
-      - scripts/
-      - README.md
-      - LICENSE
       - go.mod
       - go.sum
+      - main.go
       - cmd/
       - pkg/
-      - main.go
       - completions/
+      - README.md
+      - LICENSE
 
 # Checksums
 checksum:
@@ -166,7 +165,7 @@ checksum:
 sboms:
   - artifacts: archive
     documents:
-      - "{{ .ProjectName }}_{{ .Version }}_sbom.spdx.json"
+      - "{{ .ProjectName }}_{{ .Version }}_sbom.json"
 
 # Snapshots (for unreleased versions)
 snapshot:
