Apply working pipeline configurations from test project
- Fix .goreleaser.yaml SBOM format and Docker extra_files
- Streamline release.yml workflow based on proven patterns
- Update setup-release-infrastructure.sh with CI-friendly authentication
- Fix Dockerfile to use Alpine instead of scratch
- Add comprehensive local pipeline testing script

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, fix-pipeline ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop, fix-pipeline ]
   workflow_call:  # Allow this workflow to be called by other workflows
 
 jobs:
